# kids_stories_heroku

./: .buildpacks  .env.example  .gitignore  Makefile  Procfile  alembic.ini  dump.rdb  environment.yml  fix_narration.md  nltk.txt  pyproject.toml  readme.md  requirements.txt  settings.py  tasks.md
alembic/: env.py
alembic/versions/: 07393ec6c42d_add_korean_hindi_languages.py  35dbfdc84a41_setup_models.py  37d529d80570_add_language_support_to_pages.py  6a8fb1f45dcc_create_title_in_model.py  6bb1d7b8bd2c_add_difficulty_level_and_readability_.py  b3af9d782123_add_model_tracking_to_books.py  cbfb4bd82675_add_image_url_to_page_model.py  e12e84c4a725_fixed_updated_at.py  f9cb02db6566_add_audio_url_to_page_model.py
app/: celery_worker.py  content_safety.py  crud.py  db.py  main.py  model_providers.py  model_providers_gemini.py  model_providers_openai.py  models.py  narrative_engine.py  readability_analyzer.py  redis_client.py  sample_stories.py  settings.py  storage.py  translation_service.py  utils.py
db/: connection.py  schema_er_diagram.puml  table_schemas.sql
db/migrations/: 20250417_add_status_to_books.sql
lambdas/: create_book.py  generate_book.py  get_book.py
services/: ai_generator.py
shared/: books.py  responses.py
storage/: data_processors.py
storytelling/: narrative_engine.py
tests/: local_test_script.py
utils/: content_safety.py  monitoring.py
