[tool.poetry]
name = "kids-story-heroku"
version = "0.1.0"
description = "Backend service to generate children's stories using LLMs"
authors = ["Josh Newland <newlandj@gmail.com>"]
# readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
boto3 = "^1.38.0"         # AWS S3 for file storage
celery = "^5.4"
httpx = "^0.28.1"          # HTTP client for async calls
fastapi = "^0.115.0"
nltk = "^3.9"              # Natural Language Toolkit for readability analysis
openai = "^1.77.0"        # OpenAI API client
pillow = "^11.1.0"         # Image processing
psycopg2-binary = "^2.9.9"  # PostgreSQL driver for Heroku and local testing
psutil = "^7.0.0"
pydantic = "^2.11.2"        # Data validation and settings management
python-dotenv = "^1.1.0"   # Load environment variables from .env
redis = "^6.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.40"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11.0"
pytest = ">=8.0.0" # Added pytest for potential unit testing
poetry-plugin-export = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Basic Ruff configuration
[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

# Target Python 3.12 for compatibility checks
target-version = "py312"

[tool.ruff.lint]
# Add specific rules if needed
# select = ["E", "F", "W", "I001"]

[tool.ruff.format]
# Config options for the formatter
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# You might want to exclude generated files or vendored code
# exclude = [".venv", ...]
